--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 body {
   height: 100vh;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Manrope, sans-serif;
+  background: hsl(212, 23%, 69%);
 }
